# NLP-Project

./: .gitignore  Clustering.ipynb  DbExploration.ipynb  FEN_distribution.ipynb  LICENSE  MoveDistribution.ipynb  N-grams.ipynb  README.md  ZipfLaw.ipynb  chessTransformer.ipynb  move_map.yaml  pyproject.toml  requirements.txt  script.md  setup.py  word2vec.model
ChessBOT_GPT2/: ZERO-FEW_shot.ipynb  chessBot.ipynb  legalRate.txt  testing_sequences.txt
ChessBOT_GPT2/Model90K/: GPT2Finetuning.ipynb  eval_log.txt  nlp-pr2.ipynb
ChessPlayerApplet/: ChessPlayerApplet.py
datawrangling/: PieceMoved.py
model_weights/: word2vec.model
nlpChess/: __main__.py  chess_utils.py  db_utils.py  entrypoint.py
nlpChess/ChessPlayerApplet/: ChessPlayerApplet.py  ChessPlayerAppletMouse.py  ChessPlayerAppletVocal.py  chess_bot copy.py  chess_bot.py  chess_bot_just_last_outcomePrediction.py
nlpChess/dataset/: ChessDataset.py  __init__.py  base.py  classification.py  lit_module.py  seq2seq.py
nlpChess/models/: BiLSTM.py  BiLSTM_NER.py  __init__.py  hf_interface.py  lit_modules.py  word2vec.model
notebooks/: DatasetTesting.ipynb  EmbeddingsClusteringRag.ipynb  EmbeddingsClusteringRag_justLastOucomePrediction_lstmHiddenState.ipynb  EmbeddingsClusteringRag_justLastOucomePrediction_lstmOutput.ipynb  EmbeddingsClusteringRag_seqOutcomePrediction_lstmLongTermMem.ipynb  Llama.ipynb  Llama_2.ipynb  N-grams.ipynb  OutcomeClassification.ipynb  README.md  ZERO-FEW_shot.ipynb  ZipfLaw.ipynb  bert_retrieval.ipynb  chess_bot_gpt2.ipynb  convert_data.ipynb  create_dataset.ipynb  data_exploration.ipynb  db_interface_example.ipynb  final.ipynb  finalTemp.ipynb  finalWithDataExp.ipynb  final_ferdi.ipynb  final_martina.ipynb  final_robin.ipynb  fun_tools.ipynb  game_entropy.ipynb  game_tree_analysis.ipynb  get_game_info.ipynb  gpt2ChessBot.ipynb  lstm_analysis.ipynb  move_skip_gram.ipynb  move_skip_gram_1.ipynb  pad_token_percentage.ipynb
project/: __main__.py  chess_utils.py  db_utils.py  entrypoint.py
utils/: ChessMoveVisualizer.py  MovePlotter.py
(+29 files in other folders)
