[project]
name = "nlp-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Robin Uhrich",email = "robin.uhrich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=1.18.5,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "polars (>=1.28.1,<2.0.0)",
    "mlcroissant (>=1.0.17,<2.0.0)",
    "datasets (>=3.5.1,<4.0.0)",
    "huggingface-hub[hf-xet] (>=0.30.2,<0.31.0)",
    "chess (>=1.11.2,<2.0.0)",
    "pydot (>=4.0.0,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "lightning (>=2.5.1.post0,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "einops (>=0.8.1,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
