[project]
name = "nlp-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Robin Uhrich",email = "robin.uhrich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "numpy (>=1.18.5,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "polars (>=1.28.1,<2.0.0)",
    "mlcroissant (>=1.0.17,<2.0.0)",
    "datasets (>=3.5.1,<4.0.0)",
    "huggingface-hub[hf-xet] (>=0.30.2,<0.31.0)",
    "chess (>=1.11.2,<2.0.0)",
    "pydot (>=4.0.0,<5.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "lightning (>=2.5.1.post0,<3.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "einops (>=0.8.1,<0.9.0)",
    "pyargwriter (>=1.1.3,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "lark (>=1.2.2,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "cairosvg (>=2.8.2,<3.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
